# Distributed-Simplex

./: README.md
Matlab/: SimplexFunction.m  main.m
simplex/: CMakeLists.txt  package.xml
simplex/launch/: simplex_launch.launch
simplex/src/: Simplex.cpp  Simplex.hpp  main.cpp
